2986 - review fixes.